css/main.css
html {
    font-size: 1em;
    line-height: 1.4;
}

body{
    font-family: 'Open Sans', sans-serif;
    color: #3d464d;
}

h1, h3 {
    line-height: 40px;
    text-rendering: optimizelegibility;
}

.content{
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    position:absolute;
    top:0;right:0;bottom:0;left:0;

    box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
    -webkit-box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
    -moz-box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
    -o-box-shadow: inset 0px 0px 100px 10px rgba(0,0,0,.2);
}

.av{
    margin: 50px auto;
    width:300px;
}

.headline{
    margin-top: 50px;
    text-align: center;
}

.headline h1{
    font-size: 60px;
    color: #3d464d;
    margin: 0;
    font-weight: 500;
}

.headline h3{
    margin: 0;
    font-size: 28px;
    font-weight: 100;
    opacity: .6;
}

.main-nav{
    margin: 40px auto 0 auto;
    text-align: center;
    font-size: 18px;
    font-weight: 300;
}

.main-nav > ul{
    padding: 0;
}

.main-nav > ul > li{
    margin-left: 50px;
    display: inline-block;
    vertical-align: middle;

    -webkit-transition: all .1s ease;
    -moz-transition: all .1s ease;
    -o-transition: all .1s ease;
    transition: all .1s ease;
}

.main-nav > ul > li:first-child{
    margin-left: 0;
}

.main-nav > ul > li:hover{
    margin-top: -10px;
    font-weight: 500;
}

.main-nav > ul > li > a{
    padding: 32px 0;
    margin-top: -32px;
    text-decoration: none;
    color: #3d464d;
}

.main-nav li.abt{
    width: 65px;
}

.main-nav li.git{
    width: 65px;
}

.main-nav li.so{
    width: 120px;
}

.main-nav li.pt{
    width: 65px;
}

.main-nav li.res{
    width: 65px;
}

.about{
    text-align: center;
    font-size: 16px;
    font-weight: 100;
}

#about{
    opacity: 0;
    visibility: hidden;

    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    transition: all 1s ease;
}

#about:target{
    opacity: .9;
    visibility: visible;
}

.sm-container{
    width:800px;
    margin: 0 auto;
    text-align: center;
    margin-bottom: 40px;
}

.sm-icon{
    background-color: #3d464d;
    height: 32px;
    width: 32px;
    line-height: 28px;
    border-radius: 17px;
    display:inline-block;

    -webkit-transition: opacity .1s ease;
    -moz-transition: opacity .1s ease;
    -o-transition: opacity .1s ease;
    transition: opacity .1s ease;
}

.sm-icon:hover{
    opacity: .4;
}

.sm-icon::after {
    content: ".";
    visibility: hidden;
}

.sm-icon img{
    display: block;
    margin: 4px auto;
}

